# refactored-parakeet

./: README.md  index.html  pyproject.toml
packaging/: Build Mac App.command  make_mac_app.py
src/serato_rekordbox_sync/: __init__.py  cli.py  crate_parser.py  gui.py  rekordbox_xml.py  sync.py
tests/: test_crate_parser.py  test_sync.py
